Fix CSS: outline sur tr au survol (border-collapse incompatible avec border sur tr)

--- a/tableauDeBord.css
+++ b/tableauDeBord.css
@@ -616,8 +616,8 @@ tr:hover {
     color: darkblue;
 }
 
-.tr-dossier-link:hover tr {
-    border: 2px solid darkblue;
+.tr-dossier-link:hover {
+    outline: 2px solid darkblue;
 }
 
 /* Filtres */
